@@ -1,5 +1,11 @@
 2004-01-22 Kilian Krause <kk@verfaction.de>
 
+	* src/chat_window.cpp, src/common.h: removes unneeded begin/end call
+	notification in text-chat. Patch supplied by Julien Puydt
+	<julien.puydt@laposte.net>
+
+2004-01-22 Kilian Krause <kk@verfaction.de>
+
 	* src/callbacks.cpp, src/config.cpp, src/connection.cpp,
 	src/endpoint.cpp, src/gatekeeper.cpp, src/gnomemeeting.cpp,
 	src/ils.cpp, src/lid.cpp, src/misc.cpp, src/misc.h, src/tools.cpp,
